--- a/LibraryManagement.csproj
+++ b/LibraryManagement.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
+    <ConsoleOutputEncoding>utf-8</ConsoleOutputEncoding>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
